# shuttlings-cch24

./: Cargo.toml  Shuttle.toml
src/: main.rs
src/routes/: day_minus_one.rs  day_nine.rs  day_sixteen.rs  day_twelve.rs  day_twenty_three.rs  day_two.rs  mod.rs
src/routes/day_five/: json_manifest.rs  mod.rs  toml_manifest.rs  yaml_manifest.rs
src/routes/day_nineteen/: mod.rs  quote_controller.rs
