[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.4", features = ["macros"] }
cargo-manifest = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
html-escape = "0.2.13"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
sqlx ={version =  "0.8.2", features = ["chrono", "uuid"] }
tokio = { version = "1.28.2", features = ["time"]}
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.11.0", features = ["v4"] }
